--- a/Project/style.css
+++ b/Project/style.css
@@ -18,7 +18,7 @@ body {
   border-radius: 10px 10px 0px 0px;
   padding: 20px;
 }
-form, .content {
+ .content {
   width: 30%;
   margin: 0px auto;
   padding: 20px;
@@ -26,6 +26,7 @@ form, .content {
   background: white;
   border-radius: 0px 0px 10px 10px;
 }
+
 .input-group {
   margin: 10px 0px 10px 0px;
 }
@@ -34,6 +35,9 @@ form, .content {
   text-align: left;
   margin: 3px;
 }
+.input-right{ 
+  float:right; 
+} 
 .input-group input {
   height: 30px;
   width: 93%;
