--- a/Project/style.css
+++ b/Project/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: monospace;
-    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(./images/login.jpg);
+    background-image:url(./images/login.jpg);
    background-size: cover;
    background-attachment: fixed;
  }
